--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "express": "^4.16.2",
     "material-ui": "^0.20.0",
     "moment": "^2.21.0",
-    "react": "^16.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
     "react-big-calendar": "^0.18.0",
-    "react-dom": "^16.2.0",
     "sweetalert": "^2.1.0"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "predeploy": "npm run build",
