--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "material-ui": "^0.20.0",
     "moment": "^2.21.0",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.18.0",
     "react-dom": "^16.13.1",
+    "react-id-generator": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "react-big-calendar": "^0.18.0",
     "sweetalert": "^2.1.0"
   },
   "devDependencies": {
