--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "globalize": "^1.5.0",
+    "lodash": "^4.17.15",
     "material-ui": "^0.20.0",
     "moment": "^2.21.0",
     "react": "^16.13.1",
-    "react-big-calendar": "^0.18.0",
+    "react-big-calendar": "^0.24.6",
     "react-dom": "^16.13.1",
     "react-id-generator": "^3.0.0",
     "react-redux": "^7.2.0",
