init setting up redux add event update event del event

--- a/package.json
+++ b/package.json
@@ -1,44 +1,62 @@
 {
-  "name": "gyfo",
-  "version": "0.1.0",
-  "private": true,
+  "name": "build-sandbox",
+  "version": "1.0.0",
+  "description": "Sandbox to play with React build tools",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack-dev-server",
+    "build": "webpack --env.mode=production",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Juriy Bura",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.2",
-    "globalize": "^1.5.0",
-    "lodash": "^4.17.15",
-    "material-ui": "^0.20.0",
-    "moment": "^2.21.0",
-    "react": "^16.13.1",
-    "react-big-calendar": "^0.24.6",
-    "react-dom": "^16.13.1",
-    "react-id-generator": "^3.0.0",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
+    "@fullcalendar/list": "^4.4.0",
+    "@fullcalendar/react": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.4.0",
+    "core-js": "^3.1.4",
+    "date-fns": "^2.14.0",
+    "rc-select": "^10.3.5",
+    "react": "^16.11.0",
+    "react-device-detect": "^1.12.1",
+    "react-dom": "^16.11.0",
+    "react-hook-form": "^5.7.2",
+    "react-material-ui-form-validator": "^2.0.10",
+    "react-modal": "^3.11.2",
+    "react-overlays": "^3.2.0",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5",
-    "sweetalert": "^2.1.0"
+    "react-responsive-modal": "^5.0.2",
+    "react-selectize": "^3.0.1",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0",
-    "react-scripts": "3.4.1"
-  },
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-block-scoping": "^7.4.4",
+    "@babel/plugin-transform-classes": "^7.4.4",
+    "@babel/plugin-transform-template-literals": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "@material-ui/codemod": "^4.5.0",
+    "@material-ui/core": "^4.10.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "moment": "^2.21.0",
+    "node-sass": "^4.13.0",
+    "react-id-generator": "^3.0.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.9.0"
+  }
 }
