--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
+    "lodash": "^4.17.15",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.21.0",
