--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-overlays": "^3.2.0",
     "react-redux": "^7.2.0",
     "react-selectize": "^3.0.1",
+    "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
@@ -40,16 +41,16 @@
     "@babel/preset-react": "^7.0.0",
     "@material-ui/codemod": "^4.5.0",
     "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
-    "lodash": "^4.17.15",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.21.0",
     "node-sass": "^4.13.0",
     "react-id-generator": "^3.0.0",
-    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
